Fix ruler z-index

--- a/components/corespring/ruler/src/client/styles.less
+++ b/components/corespring/ruler/src/client/styles.less
@@ -32,16 +32,17 @@
         left: 0;
         pointer-events: none;
         svg {
-            position: absolute!important;
-            overflow: visible!important;
+            position: absolute !important;
+            overflow: visible !important;
             top: 0;
             left: 0;
+            z-index: 2;
             pointer-events: none;
             image, path, circle, ellipse {
                 pointer-events: auto;
             }
             circle, ellipse {
-                cursor: pointer!important;
+                cursor: pointer !important;
             }
         }
     }
